# docs/swagger.json
@@ -95,6 +95,15 @@
                         }
                     },
                     {
+                        "description": "CoverImageUrl",
+                        "name": "cover_image_url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
                         "description": "CreatedBy",
                         "name": "created_by",
                         "in": "body",
@@ -200,6 +209,15 @@
                         "description": "Content",
                         "name": "content",
                         "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "CoverImageUrl",
+                        "name": "cover_image_url",
+                        "in": "body",
+                        "required": true,
                         "schema": {
                             "type": "string"
                         }
@@ -468,6 +486,37 @@
                         "schema": {
                             "type": "integer"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/upload": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "上传图片",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Image File",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
