# router/api/upload.go
@@ -1,0 +1,56 @@
+package api
+
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/iprologue/myBlog/common/errcode"
+	"github.com/iprologue/myBlog/pkg/app"
+	"github.com/iprologue/myBlog/pkg/upload"
+	"net/http"
+)
+
+// @Summary 上传图片
+// @Produce  json
+// @param image formData file true "Image File"
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /upload [post]
+func UploadImage(c *gin.Context) {
+	appG := app.Gin{C: c}
+	file, image, err := c.Request.FormFile("image")
+	if err != nil {
+		appG.Response(http.StatusInsufficientStorage, errcode.ERROR, nil)
+		return
+	}
+
+	if image == nil {
+		appG.Response(http.StatusBadRequest, errcode.INVALID_PARAMS, nil)
+		return
+	}
+
+	imageName := upload.GetImageName(image.Filename)
+	fullPath := upload.GetImageFullPath()
+	savePath := upload.GetImagePath()
+	src := fullPath + imageName
+
+	if !upload.CheckImageExit(imageName) || !upload.CheckImageSize(file) {
+		appG.Response(http.StatusBadRequest, errcode.ERROR_UPLOAD_CHECK_IMAGE_FORMAT, nil)
+		return
+	}
+
+	err = upload.CheckImage(fullPath)
+	if err != nil {
+		appG.Response(http.StatusInternalServerError, errcode.ERROR_UPLOAD_CHECK_IMAGE_FAIL, nil)
+		return
+	}
+
+	if err := c.SaveUploadedFile(image, src); err != nil {
+		appG.Response(http.StatusInternalServerError, errcode.ERROR_UPLOAD_SAVE_IMAGE_FAIL, nil)
+		return
+	}
+
+	appG.Response(http.StatusOK, errcode.SUCCESS, map[string]string{
+		"image_url":      upload.GetImageFullUrl(imageName),
+		"image_save_url": savePath + imageName,
+	})
+
+}
