# router/api/v1/article.go
@@ -12,14 +12,13 @@ import (
 	"net/http"
 )
 
-
 // @Summary 获取单个文章
 // @Produce  json
 // @Param id path int true "ID"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [get]
-func GetArticle(c *gin.Context)  {
+func GetArticle(c *gin.Context) {
 
 	appG := app.Gin{c}
 	id := com.StrTo(c.Param("id")).MustInt()
@@ -33,7 +32,7 @@ func GetArticle(c *gin.Context)  {
 		return
 	}
 
-	articleService := service.Article{ID:id}
+	articleService := service.Article{ID: id}
 	exist, err := articleService.ExistByID()
 	if err != nil {
 		appG.Response(http.StatusInternalServerError, errcode.ERROR_CHECK_EXIST_ARTICLE_FAIL, nil)
@@ -53,7 +52,6 @@ func GetArticle(c *gin.Context)  {
 
 }
 
-
 // @Summary 获取多个文章
 // @Produce  json
 // @Param tag_id body int false "TagID"
@@ -62,7 +60,7 @@ func GetArticle(c *gin.Context)  {
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /api/v1/articles [get]
-func GetArticles(c *gin.Context)  {
+func GetArticles(c *gin.Context) {
 	appG := app.Gin{c}
 	valid := validation.Validation{}
 
@@ -105,18 +103,19 @@ func GetArticles(c *gin.Context)  {
 
 	data := make(map[string]interface{})
 	data["lists"] = articles
-	data["tatal"]  = total
+	data["tatal"] = total
 
 	appG.Response(http.StatusOK, errcode.SUCCESS, data)
 }
 
 type AddArticleForm struct {
-	TagID int `form:"tag_id" valid:"Required;Min(1)"`
-	Title string `form:"title" valid:"Required;MaxSize(100)"`
-	Desc string `form:"desc" valid:"Required;MaxSize(255)"`
-	Content string `form:"content" valid:"Required;MaxSize(65535)"`
-	CreatedBy string `form:"created_by" valid:"Required;MaxSize(100)"`
-	State int `form:"state" valid:"Range(0,1)"`
+	TagID         int    `form:"tag_id" valid:"Required;Min(1)"`
+	Title         string `form:"title" valid:"Required;MaxSize(100)"`
+	Desc          string `form:"desc" valid:"Required;MaxSize(255)"`
+	Content       string `form:"content" valid:"Required;MaxSize(65535)"`
+	CreatedBy     string `form:"created_by" valid:"Required;MaxSize(100)"`
+	CoverImageUrl string `form:"cover_image_url" valid:"Required;MaxSize(255)"`
+	State         int    `form:"state" valid:"Range(0,1)"`
 }
 
 // @Summary 新增文章
@@ -125,12 +124,13 @@ type AddArticleForm struct {
 // @param title body string true "Title"
 // @param desc body string true "Desc"
 // @param content body string true "Content"
+// @param cover_image_url body string true "CoverImageUrl"
 // @param created_by body string true "CreatedBy"
 // @param state body int true "State"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /api/v1/articles [post]
-func AddArticle(c *gin.Context)  {
+func AddArticle(c *gin.Context) {
 	var (
 		appG = app.Gin{c}
 		form AddArticleForm
@@ -142,7 +142,7 @@ func AddArticle(c *gin.Context)  {
 		return
 	}
 
-	tagService := service.Tag{ID:form.TagID}
+	tagService := service.Tag{ID: form.TagID}
 	exist, err := tagService.ExistById()
 	if err != nil {
 		appG.Response(http.StatusInternalServerError, errcode.ERROR_EXIST_TAG_FAIL, nil)
@@ -154,11 +154,12 @@ func AddArticle(c *gin.Context)  {
 	}
 
 	articleService := service.Article{
-		TagId:   form.TagID,
-		Title:   form.Title,
-		Desc:    form.Desc,
-		Content: form.Content,
-		State:   form.State,
+		TagId:         form.TagID,
+		Title:         form.Title,
+		Desc:          form.Desc,
+		Content:       form.Content,
+		CoverImageUrl: form.CoverImageUrl,
+		State:         form.State,
 	}
 	if err := articleService.Add(); err != nil {
 		appG.Response(http.StatusInternalServerError, errcode.ERROR_ADD_ARTICLE_FAIL, nil)
@@ -170,13 +171,14 @@ func AddArticle(c *gin.Context)  {
 }
 
 type EditArticleForm struct {
-	ID int `form:"id" valid:"Required;Min(1)"`
-	TagID int `form:"tag_id" valid:"Required;Min(1)"`
-	Title string `form:"title" valid:"Required;MaxSize(100)"`
-	Desc string `form:"desc" valid:"Required;MaxSize(255)"`
-	Content string `form:"content" valid:"Required;MaxSize(65535"`
-	ModifiedBy string `form:"modified_by" valid:"Required;MaxSize(255"`
-	State int `form:"state" valid:"Range(0,1)"`
+	ID            int    `form:"id" valid:"Required;Min(1)"`
+	TagID         int    `form:"tag_id" valid:"Required;Min(1)"`
+	Title         string `form:"title" valid:"Required;MaxSize(100)"`
+	Desc          string `form:"desc" valid:"Required;MaxSize(255)"`
+	Content       string `form:"content" valid:"Required;MaxSize(65535)"`
+	CoverImageUrl string `form:"cover_image_url" valid:"Required;MaxSize(255)"`
+	ModifiedBy    string `form:"modified_by" valid:"Required;MaxSize(255)"`
+	State         int    `form:"state" valid:"Range(0,1)"`
 }
 
 // @Summary 修改文章
@@ -186,15 +188,16 @@ type EditArticleForm struct {
 // @param title body string false "Title"
 // @param desc body string false "Desc"
 // @param content body string false "Content"
+// @param cover_image_url body string true "CoverImageUrl"
 // @Param modified_by body string true "ModifiedBy"
 // @Param state body int false "State"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [put]
-func EditArticle(c *gin.Context)  {
+func EditArticle(c *gin.Context) {
 	var (
 		appG = app.Gin{c}
-		form = EditArticleForm{ID:com.StrTo(c.Param("id")).MustInt()}
+		form = EditArticleForm{ID: com.StrTo(c.Param("id")).MustInt()}
 	)
 
 	httpCode, code := app.BindAndValid(c, &form)
@@ -204,12 +207,13 @@ func EditArticle(c *gin.Context)  {
 	}
 
 	articleService := service.Article{
-		ID:         form.ID,
-		TagId:      form.TagID,
-		Desc:       form.Desc,
-		Content:    form.Content,
-		ModifiedBy: form.ModifiedBy,
-		State:      form.State,
+		ID:            form.ID,
+		TagId:         form.TagID,
+		Desc:          form.Desc,
+		Content:       form.Content,
+		CoverImageUrl: form.CoverImageUrl,
+		ModifiedBy:    form.ModifiedBy,
+		State:         form.State,
 	}
 	exist, err := articleService.ExistByID()
 	if err != nil {
@@ -241,14 +245,13 @@ func EditArticle(c *gin.Context)  {
 	appG.Response(http.StatusOK, errcode.SUCCESS, nil)
 }
 
-
 // @Summary 删除文章
 // @Produce  json
 // @Param id path int true "ID"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
 // @Router /api/v1/articles/{id} [delete]
-func DeleteArticle(c *gin.Context)  {
+func DeleteArticle(c *gin.Context) {
 
 	appG := app.Gin{c}
 	id := com.StrTo(c.Param("id")).MustInt()
