# router/router.go
@@ -5,19 +5,22 @@ import (
 	_ "github.com/iprologue/myBlog/docs"
 	"github.com/iprologue/myBlog/middleware/jwt"
 	"github.com/iprologue/myBlog/middleware/logger"
+	"github.com/iprologue/myBlog/pkg/upload"
 	"github.com/iprologue/myBlog/router/api"
 	"github.com/iprologue/myBlog/router/api/v1"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"net/http"
 )
 
-func InitRouter(r *gin.Engine)  {
+func InitRouter(r *gin.Engine) {
 
 	r.Use(gin.Logger(), gin.Recovery(), logger.LoggerToFile())
 
+	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
 	r.GET("/auth", api.GetAuth)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
+	r.POST("/upload", api.UploadImage)
 
 	GroupV1 := r.Group("/api/v1").Use(jwt.JWT())
 	{
